more changes for admin

--- a/totalhr.Resources/Resources/totalhr.Resources.csproj
+++ b/totalhr.Resources/Resources/totalhr.Resources.csproj
@@ -95,6 +95,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Common.resx</DependentUpon>
     </Compile>
+    <Compile Include="Contract.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Contract.resx</DependentUpon>
+    </Compile>
     <Compile Include="Document.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -144,6 +149,10 @@
     <EmbeddedResource Include="Common.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Common.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Contract.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Contract.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Document.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
