--- a/totalhr.data/totalhr.data.csproj
+++ b/totalhr.data/totalhr.data.csproj
@@ -275,6 +275,9 @@
     <Compile Include="EF\UserProfile.cs">
       <DependentUpon>DatabaseModels.tt</DependentUpon>
     </Compile>
+    <Compile Include="EF\UserProfilePicture.cs">
+      <DependentUpon>DatabaseModels.tt</DependentUpon>
+    </Compile>
     <Compile Include="EF\UserRole.cs">
       <DependentUpon>DatabaseModels.tt</DependentUpon>
     </Compile>
@@ -290,6 +293,8 @@
     <Compile Include="Repositories\Implementation\CalendarRepository.cs" />
     <Compile Include="Repositories\Implementation\CompanyDocumentRepository.cs" />
     <Compile Include="Repositories\Implementation\CompanyRepository.cs" />
+    <Compile Include="Repositories\Implementation\ContractRepository.cs" />
+    <Compile Include="Repositories\Implementation\ContractTemplateRepository.cs" />
     <Compile Include="Repositories\Implementation\EmailTemplateRepository.cs" />
     <Compile Include="Repositories\Implementation\FileRepository.cs" />
     <Compile Include="Repositories\Implementation\GlossaryRepository.cs" />
@@ -302,6 +307,8 @@
     <Compile Include="Repositories\Infrastructure\ICalendarRepository.cs" />
     <Compile Include="Repositories\Infrastructure\ICompanyDocumentRepository.cs" />
     <Compile Include="Repositories\Infrastructure\ICompanyRepository.cs" />
+    <Compile Include="Repositories\Infrastructure\IContractRepository.cs" />
+    <Compile Include="Repositories\Infrastructure\IContractTemplateRepository.cs" />
     <Compile Include="Repositories\Infrastructure\IEmailRepository.cs" />
     <Compile Include="Repositories\Infrastructure\IFileRepository.cs" />
     <Compile Include="Repositories\Infrastructure\IGlossaryRepository.cs" />
