--- a/totalhr.web/Web.config
+++ b/totalhr.web/Web.config
@@ -21,7 +21,7 @@
     <add key="webpages:Enabled" value="false" /> 
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" /> 
     
     <add key="AdminName" value="TotalHR Admin" />
     <add key="AdminEmail" value="admin@cyberminds.co.uk" />
@@ -33,6 +33,8 @@
     <add key="MaxFileUploadContent" />
     <add key="LoginDuration" value="30" />
     <add key="DefaultPageSize" value="5" />
+    <add key="CompanyDocumentPath" value="~/CompanyDocuments/" />
+    <add key="ProfilePicturePath" value="~/Employee/Profile/Picture/" />
   </appSettings>
   <log4net>
     <root>
