--- a/totalhr.core/totalhr.core.csproj
+++ b/totalhr.core/totalhr.core.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomViewEngine.cs" />
+    <Compile Include="PaginationItemBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UrlBuilder.cs" />
   </ItemGroup>
