--- a/FormService/FormService.csproj
+++ b/FormService/FormService.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{37A1AC80-4903-4855-9436-887DC8C3D5AD}</ProjectGuid>
+    <ProjectGuid>{F75D380A-86C8-4876-9A32-650AA08FD2FF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>totalhr.core</RootNamespace>
-    <AssemblyName>totalhr.core</AssemblyName>
+    <RootNamespace>FormService</RootNamespace>
+    <AssemblyName>FormService</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,11 +32,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Libs\System.Web.Mvc.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,11 +39,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomViewEngine.cs" />
-    <Compile Include="PaginationItemBuilder.cs" />
-    <Compile Include="ParamAdapter.cs" />
+    <Compile Include="Implementation\FormEditorService.cs" />
+    <Compile Include="Infrastructure\IFormEditorService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UrlBuilder.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\totalhr.data\totalhr.data.csproj">
+      <Project>{f5a3d97a-a1b9-463a-850e-23cf6e1fc488}</Project>
+      <Name>totalhr.data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\totalhr.Shared\totalhr.Shared.csproj">
+      <Project>{1af1abb5-66b8-4e3f-a5aa-12025159514f}</Project>
+      <Name>totalhr.Shared</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
