--- a/totalhr.web/totalhr.web.csproj
+++ b/totalhr.web/totalhr.web.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Areas\Admin\Controllers\AccountController.cs" />
     <Compile Include="Areas\Admin\Controllers\AdminBaseController.cs" />
     <Compile Include="Areas\Admin\Controllers\ContractController.cs" />
+    <Compile Include="Areas\Admin\Controllers\FormEditorController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\TimeRecording\Controllers\TimeRecordingController.cs" />
     <Compile Include="Areas\TimeRecording\ViewModels\SearchVM.cs" />
@@ -299,6 +300,12 @@
     <Content Include="Areas\Admin\Views\Contract\Manage.cshtml" />
     <Content Include="Areas\Admin\Views\Contract\Template.cshtml" />
     <Content Include="Areas\Admin\Views\Contract\CreateTemplate.cshtml" />
+    <Content Include="Areas\Admin\Views\FormEditor\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\FormEditor\Preview.cshtml" />
+    <Content Include="Areas\Admin\Views\FormEditor\EditForm.cshtml" />
+    <Content Include="Areas\Admin\Views\FormEditor\CreateForm.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_FormQuickPreview.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_FormStatus.cshtml" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.1.js" />
     <Content Include="Scripts\jquery-2.1.1.min.js" />
@@ -437,6 +444,10 @@
     <ProjectReference Include="..\FileManagementService\FileManagementService.csproj">
       <Project>{25e457d8-382f-4d73-9d1d-8f17d8927bd1}</Project>
       <Name>FileManagementService</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FormService\FormService.csproj">
+      <Project>{f75d380a-86c8-4876-9a32-650aa08fd2ff}</Project>
+      <Name>FormService</Name>
     </ProjectReference>
     <ProjectReference Include="..\totalhr.data.TimeRecordingSystem\totalhr.data.TimeRecordingSystem.csproj">
       <Project>{aae8d583-9a4f-4e69-ab31-9a0cdceb4bcb}</Project>
