more work on templates

--- a/totalhr.web/totalhr.web.csproj
+++ b/totalhr.web/totalhr.web.csproj
@@ -306,6 +306,7 @@
     <Content Include="Areas\Admin\Views\FormEditor\CreateForm.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_FormQuickPreview.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_FormStatus.cshtml" />
+    <Content Include="Areas\Admin\Views\Contract\EditTemplate.cshtml" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.1.js" />
     <Content Include="Scripts\jquery-2.1.1.min.js" />
