--- a/totalhr.web/totalhr.web.csproj
+++ b/totalhr.web/totalhr.web.csproj
@@ -309,6 +309,7 @@
     <Content Include="Areas\Admin\Views\Shared\_FormStatus.cshtml" />
     <Content Include="Areas\Admin\Views\Contract\EditTemplate.cshtml" />
     <Content Include="Areas\Admin\Views\Contract\ManageUserContract.cshtml" />
+    <Content Include="Areas\Admin\Views\Contract\FillContract.cshtml" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.1.js" />
     <Content Include="Scripts\jquery-2.1.1.min.js" />
