--- a/totalhr.data/totalhr.data.csproj
+++ b/totalhr.data/totalhr.data.csproj
@@ -275,6 +275,9 @@
     <Compile Include="EF\UserContract.cs">
       <DependentUpon>DatabaseModels.tt</DependentUpon>
     </Compile>
+    <Compile Include="EF\UserContractData.cs">
+      <DependentUpon>DatabaseModels.tt</DependentUpon>
+    </Compile>
     <Compile Include="EF\UserProfile.cs">
       <DependentUpon>DatabaseModels.tt</DependentUpon>
     </Compile>
