--- a/totalhr.web/totalhr.web.csproj
+++ b/totalhr.web/totalhr.web.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Areas\Admin\Controllers\FormEditorController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Models\UserContractDetails.cs" />
+    <Compile Include="Areas\Admin\Models\UserContractFormDetails.cs" />
     <Compile Include="Areas\TimeRecording\Controllers\TimeRecordingController.cs" />
     <Compile Include="Areas\TimeRecording\ViewModels\SearchVM.cs" />
     <Compile Include="Areas\TimeRecording\ViewModels\TimeRecordingDetailsVM.cs" />
