--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\Authentication\packages.config" />
   <repository path="..\CalendarService\packages.config" />
   <repository path="..\Common\packages.config" />
+  <repository path="..\FormService\packages.config" />
   <repository path="..\totalhr.admin\packages.config" />
   <repository path="..\totalhr.data.TimeRecordingSystem\packages.config" />
   <repository path="..\totalhr.data\packages.config" />
