more layout changes

--- a/totalhr.Shared/totalhr.Shared.csproj
+++ b/totalhr.Shared/totalhr.Shared.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Models\LoginStruct.cs" />
     <Compile Include="Models\NewEmployeeInfo.cs" />
     <Compile Include="Models\NewUserInfo.cs" />
+    <Compile Include="Models\ProfileInfo.cs" />
     <Compile Include="Models\ResultInfo.cs" />
     <Compile Include="Models\SimpleUser.cs" />
     <Compile Include="Models\SortingInfo.cs" />
