--- a/FormService/FormService.csproj
+++ b/FormService/FormService.csproj
@@ -50,6 +50,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\totalhr.core\totalhr.core.csproj">
+      <Project>{37a1ac80-4903-4855-9436-887dc8c3d5ad}</Project>
+      <Name>totalhr.core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\totalhr.data\totalhr.data.csproj">
       <Project>{f5a3d97a-a1b9-463a-850e-23cf6e1fc488}</Project>
       <Name>totalhr.data</Name>
