--- a/totalhr.web/totalhr.web.csproj
+++ b/totalhr.web/totalhr.web.csproj
@@ -1261,6 +1261,7 @@
     <Content Include="Areas\Admin\Views\Shared\_MyMessagePreview.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_MyNotificationPreview.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_MyProfilePreview.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_EditForm.cshtml" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.1.js" />
     <Content Include="Scripts\jquery-2.1.1.min.js" />
